Use streams for ListUtil.apply